k8s/k8s.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: crypto-chat-app
spec:
  selector:
    app: crypto-chat-app
  ports:
  - name: http
    protocol: TCP
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-chat-app
  labels:
    app: crypto-chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crypto-chat-app
  template:
    metadata:
      labels:
        app: crypto-chat-app
    spec:
      containers:
      - name: crypto-chat-app
        image: registry.psycho-appz.net/crypto-chat:latest
