k8s/traefik-routes.yml
---
# TODO: Maybe HTTP to HTTPS.  Instead of forcing elsewhere
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name:  crypt-chat-ingress
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`otr.ji.lc`) 
    kind: Rule
    services:
    - name: crypto-chat-app
      port: 80
      tls: {}
  tls:
    secretName: cloudflare-origin-psychoappz
---
